--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
-        "s-ichikawa/laravel-sendgrid-driver": "dev-master"
+        "s-ichikawa/laravel-sendgrid-driver": "dev-dev"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
