--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
-        "s-ichikawa/laravel-sendgrid-driver": "dev-dev",
+        "s-ichikawa/laravel-sendgrid-driver": "dev-master",
         "s-ichikawa/laravel-sendgrid-log-driver": "dev-master"
     },
     "require-dev": {
