--- a/composer.json
+++ b/composer.json
@@ -19,15 +19,15 @@
         "laravel/framework": "5.3.*",
         "s-ichikawa/laravel-sendgrid-driver": "dev-master",
         "devster/ubench": "^1.2",
-        "s-ichikawa/laravel-line-notify": "dev-master"
+        "s-ichikawa/laravel-line-notify": "dev-master",
+        "barryvdh/laravel-ide-helper": "^2.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.0",
         "symfony/css-selector": "3.1.*",
-        "symfony/dom-crawler": "3.1.*",
-        "barryvdh/laravel-ide-helper": "^2.2"
+        "symfony/dom-crawler": "3.1.*"
     },
     "autoload": {
         "classmap": [
