--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,9 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
-        "s-ichikawa/laravel-sendgrid-driver": "dev-dev",
         "devster/ubench": "^1.2",
-        "s-ichikawa/laravel-line-notify": "dev-master",
-        "barryvdh/laravel-ide-helper": "^2.2"
+        "barryvdh/laravel-ide-helper": "^2.2",
+        "s-ichikawa/laravel-sendgrid-driver": "^1.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
